Minor cleanup - Changed code to adhere to checkstyle - Switched some method calls to more pragmatic ones